splitup modules